--- a/index.html
+++ b/index.html
@@ -277,6 +277,23 @@
                   </li>
               </ul>
           </li>
+          <li>
+            <a href="#products" class="toc-h1 toc-link" data-title="Products">Products</a>
+              <ul class="toc-list-h2">
+                  <li>
+                    <a href="#save-product" class="toc-h2 toc-link" data-title="Save Product">Save Product</a>
+                  </li>
+                  <li>
+                    <a href="#update-product" class="toc-h2 toc-link" data-title="Update Product">Update Product</a>
+                  </li>
+                  <li>
+                    <a href="#fetch-single-product" class="toc-h2 toc-link" data-title="Fetch Single Product">Fetch Single Product</a>
+                  </li>
+                  <li>
+                    <a href="#fetch-all-products" class="toc-h2 toc-link" data-title="Fetch All Products">Fetch All Products</a>
+                  </li>
+              </ul>
+          </li>
       </ul>
         <ul class="toc-footer">
             <li><a href='http://nugeninfo.com'>AmanCare Cover API Docs</a></li>
@@ -894,6 +911,222 @@ User can login with both email and mobile number</p>
 <td>Name of category</td>
 </tr>
 </tbody></table>
+
+<aside class="success">
+ User must be authorized.Send user token in the header.
+</aside>
+<h1 id='products'>Products</h1><h2 id='save-product'>Save Product</h2>
+<blockquote>
+<p>Success-Response:</p>
+</blockquote>
+<pre class="highlight json tab-json"><code><span class="w">
+</span><span class="err">HTTP</span><span class="w"> </span><span class="mi">200</span><span class="w"> </span><span class="err">OK</span><span class="w">
+</span><span class="p">{</span><span class="w">
+  </span><span class="s2">"msg"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="w">
+</span><span class="p">}</span><span class="w">
+
+</span></code></pre>
+<blockquote>
+<p>Error-Response:</p>
+</blockquote>
+<pre class="highlight json tab-json"><code><span class="w">
+</span><span class="err">HTTP</span><span class="w"> </span><span class="mi">422</span><span class="w"> </span><span class="err">OK</span><span class="w">
+</span><span class="p">{</span><span class="w">
+  </span><span class="s2">"msg"</span><span class="p">:</span><span class="w"> </span><span class="mi">0</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"error"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Product name can't be blank"</span><span class="w">
+</span><span class="p">}</span><span class="w">
+
+</span></code></pre>
+<p>Save new Product</p>
+<h3 id='http-request-16'>HTTP Request</h3>
+<p><code>POST https://amancover.herokuapp.com/v1/products</code></p>
+<h3 id='query-parameters-14'>Query Parameters</h3>
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Type</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>name</td>
+<td>String</td>
+<td>Name of Product</td>
+</tr>
+<tr>
+<td>quantity</td>
+<td>String</td>
+<td>Quantity of Product</td>
+</tr>
+<tr>
+<td>category_id</td>
+<td>String</td>
+<td>Category</td>
+</tr>
+<tr>
+<td>user_id</td>
+<td>String</td>
+<td>user id</td>
+</tr>
+<tr>
+<td>size</td>
+<td>String</td>
+<td>size of product</td>
+</tr>
+<tr>
+<td>color</td>
+<td>String</td>
+<td>color of product</td>
+</tr>
+<tr>
+<td>price</td>
+<td>String</td>
+<td>price of product</td>
+</tr>
+<tr>
+<td>image</td>
+<td>String</td>
+<td>image of product</td>
+</tr>
+</tbody></table>
+
+<aside class="success">
+ User must be authorized.Send user token in the header.
+</aside>
+<h2 id='update-product'>Update Product</h2>
+<blockquote>
+<p>Success-Response:</p>
+</blockquote>
+<pre class="highlight json tab-json"><code><span class="w">
+</span><span class="err">HTTP</span><span class="w"> </span><span class="mi">200</span><span class="w"> </span><span class="err">OK</span><span class="w">
+</span><span class="p">{</span><span class="w">
+  </span><span class="s2">"msg"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="w">
+</span><span class="p">}</span><span class="w">
+
+</span></code></pre>
+<blockquote>
+<p>Error-Response:</p>
+</blockquote>
+<pre class="highlight json tab-json"><code><span class="w">
+</span><span class="err">HTTP</span><span class="w"> </span><span class="mi">422</span><span class="w"> </span><span class="err">OK</span><span class="w">
+</span><span class="p">{</span><span class="w">
+  </span><span class="s2">"msg"</span><span class="p">:</span><span class="w"> </span><span class="mi">0</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"error"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Unable to update product"</span><span class="w">
+</span><span class="p">}</span><span class="w">
+
+</span></code></pre>
+<p>Update the existing product</p>
+<h3 id='http-request-17'>HTTP Request</h3>
+<p><code>POST https://amancover.herokuapp.com/v1/updateProduct</code></p>
+<h3 id='query-parameters-15'>Query Parameters</h3>
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Type</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>name</td>
+<td>String</td>
+<td>Name of Product</td>
+</tr>
+<tr>
+<td>quantity</td>
+<td>String</td>
+<td>Quantity of Product</td>
+</tr>
+<tr>
+<td>category_id</td>
+<td>String</td>
+<td>Category</td>
+</tr>
+<tr>
+<td>user_id</td>
+<td>String</td>
+<td>user id</td>
+</tr>
+<tr>
+<td>size</td>
+<td>String</td>
+<td>size of product</td>
+</tr>
+<tr>
+<td>color</td>
+<td>String</td>
+<td>color of product</td>
+</tr>
+<tr>
+<td>price</td>
+<td>String</td>
+<td>price of product</td>
+</tr>
+<tr>
+<td>image</td>
+<td>String</td>
+<td>image of product</td>
+</tr>
+</tbody></table>
+
+<aside class="success">
+ User must be authorized.Send user token in the header.
+</aside>
+<h2 id='fetch-single-product'>Fetch Single Product</h2>
+<blockquote>
+<p>Success-Response:</p>
+</blockquote>
+<pre class="highlight json tab-json"><code><span class="w">
+</span><span class="err">HTTP</span><span class="w"> </span><span class="mi">200</span><span class="w"> </span><span class="err">OK</span><span class="w">
+</span><span class="p">{</span><span class="w">
+  </span><span class="s2">"msg"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="w">
+</span><span class="p">}</span><span class="w">
+
+</span></code></pre>
+<blockquote>
+<p>Error-Response:</p>
+</blockquote>
+<pre class="highlight json tab-json"><code><span class="w">
+</span><span class="err">HTTP</span><span class="w"> </span><span class="mi">422</span><span class="w"> </span><span class="err">OK</span><span class="w">
+</span><span class="p">{</span><span class="w">
+  </span><span class="s2">"msg"</span><span class="p">:</span><span class="w"> </span><span class="mi">0</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"error"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Unable to find Product"</span><span class="w">
+</span><span class="p">}</span><span class="w">
+
+</span></code></pre>
+<p>Fetch Single Product details</p>
+<h3 id='http-request-18'>HTTP Request</h3>
+<p><code>GET https://amancover.herokuapp.com/v1/products/:id</code></p>
+<h3 id='query-parameters-16'>Query Parameters</h3>
+<p>Send Id in the url</p>
+
+<aside class="success">
+ User must be authorized.Send user token in the header.
+</aside>
+<h2 id='fetch-all-products'>Fetch All Products</h2>
+<blockquote>
+<p>Success-Response:</p>
+</blockquote>
+<pre class="highlight json tab-json"><code><span class="w">
+</span><span class="err">HTTP</span><span class="w"> </span><span class="mi">200</span><span class="w"> </span><span class="err">OK</span><span class="w">
+</span><span class="p">[</span><span class="w">
+  </span><span class="p">{</span><span class="w">
+    </span><span class="s2">"name"</span><span class="w"> </span><span class="p">:</span><span class="w"> </span><span class="s2">"data"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"quantity"</span><span class="w"> </span><span class="p">:</span><span class="w"> </span><span class="s2">"data"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"category_id"</span><span class="w"> </span><span class="p">:</span><span class="w"> </span><span class="s2">"1"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"user_id"</span><span class="w"> </span><span class="p">:</span><span class="w"> </span><span class="s2">"1"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"size"</span><span class="w"> </span><span class="p">:</span><span class="w"> </span><span class="s2">"data"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"color"</span><span class="w"> </span><span class="p">:</span><span class="w"> </span><span class="s2">"data"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"price"</span><span class="w"> </span><span class="p">:</span><span class="w"> </span><span class="s2">"data"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"image"</span><span class="w"> </span><span class="p">:</span><span class="w"> </span><span class="s2">"/uploads/dkf87dhfjdfhjd.jpg"</span><span class="w">
+ </span><span class="p">}</span><span class="w">
+</span><span class="p">]</span><span class="w">
+
+</span></code></pre>
+<p>Fetch All Product details</p>
+<h3 id='http-request-19'>HTTP Request</h3>
+<p><code>GET https://amancover.herokuapp.com/v1/products</code></p>
+<h3 id='query-parameters-17'>Query Parameters</h3>
+<p>No Parameters</p>
 
 <aside class="success">
  User must be authorized.Send user token in the header.
