--- a/index.html
+++ b/index.html
@@ -368,6 +368,16 @@
 <td>Address of user</td>
 </tr>
 <tr>
+<td>qualification</td>
+<td>String</td>
+<td>Qualification of user(only for mr)</td>
+</tr>
+<tr>
+<td>photo</td>
+<td>String</td>
+<td>Photo of user (only for mr)</td>
+</tr>
+<tr>
 <td>role</td>
 <td>String</td>
 <td>Value must be =&gt; admin,vendor,supplier or mr</td>
@@ -505,7 +515,11 @@ User can login with both email and mobile number</p>
   </span><span class="s2">"gst"</span><span class="p">:</span><span class="w"> </span><span class="s2">"data"</span><span class="p">,</span><span class="w">
   </span><span class="s2">"address"</span><span class="p">:</span><span class="w"> </span><span class="s2">"data"</span><span class="p">,</span><span class="w">
   </span><span class="s2">"role"</span><span class="p">:</span><span class="w"> </span><span class="s2">"data"</span><span class="p">,</span><span class="w">
-  </span><span class="s2">"verified"</span><span class="p">:</span><span class="w"> </span><span class="s2">"data"</span><span class="w">
+  </span><span class="s2">"verified"</span><span class="p">:</span><span class="w"> </span><span class="s2">"data"</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"qualification"</span><span class="p">:</span><span class="w"> </span><span class="s2">"data"</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"is_active"</span><span class="p">:</span><span class="w"> </span><span class="kc">true</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"photo"</span><span class="p">:</span><span class="w"> </span><span class="s2">"/uploads/jdfh878.jpg"</span><span class="p">,</span><span class="w">
+
 </span><span class="p">}</span><span class="w">
 
 </span></code></pre>
