--- a/index.html
+++ b/index.html
@@ -726,6 +726,16 @@ User can login with both email and mobile number</p>
 <td>String</td>
 <td>Address of user</td>
 </tr>
+<tr>
+<td>qualification</td>
+<td>String</td>
+<td>Qualification of user(only for mr)</td>
+</tr>
+<tr>
+<td>photo</td>
+<td>String</td>
+<td>Photo of user (only for mr)</td>
+</tr>
 </tbody></table>
 
 <aside class="success">
