publish: little bit changes
generated from commit 6b6fcb3d44f6d656fcabd14aa19869cffe47fa0d

--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@ User can login with both email and mobile number</p>
   </span><span class="s2">"verified"</span><span class="p">:</span><span class="w"> </span><span class="s2">"data"</span><span class="p">,</span><span class="w">
   </span><span class="s2">"qualification"</span><span class="p">:</span><span class="w"> </span><span class="s2">"data"</span><span class="p">,</span><span class="w">
   </span><span class="s2">"is_active"</span><span class="p">:</span><span class="w"> </span><span class="kc">true</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"created_by"</span><span class="p">:</span><span class="w"> </span><span class="s2">"self"</span><span class="p">,</span><span class="w">
   </span><span class="s2">"photo"</span><span class="p">:</span><span class="w"> </span><span class="s2">"/uploads/jdfh878.jpg"</span><span class="p">,</span><span class="w">
 
 </span><span class="p">}</span><span class="w">
@@ -1063,11 +1064,6 @@ Only admin can save the products otherwise you will get the not authorized error
 <td>Category</td>
 </tr>
 <tr>
-<td>user_id</td>
-<td>String</td>
-<td>user id</td>
-</tr>
-<tr>
 <td>size</td>
 <td>String</td>
 <td>size of product</td>
@@ -1140,11 +1136,6 @@ Only admin can update the product otherwise you will get not authorized error</p
 <td>category_id</td>
 <td>String</td>
 <td>Category</td>
-</tr>
-<tr>
-<td>user_id</td>
-<td>String</td>
-<td>user id</td>
 </tr>
 <tr>
 <td>size</td>
