--- a/index.html
+++ b/index.html
@@ -1291,7 +1291,8 @@ Only admin can update the product otherwise you will get not authorized error</p
 <pre class="highlight json tab-json"><code><span class="w">
 </span><span class="err">HTTP</span><span class="w"> </span><span class="mi">200</span><span class="w"> </span><span class="err">OK</span><span class="w">
 </span><span class="p">{</span><span class="w">
-  </span><span class="s2">"msg"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="w">
+  </span><span class="s2">"msg"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"order_id"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="w">
 </span><span class="p">}</span><span class="w">
 
 </span></code></pre>
@@ -1407,7 +1408,8 @@ Only admin can update the product otherwise you will get not authorized error</p
   </span><span class="p">]</span><span class="w">
 
 </span></code></pre>
-<p>Fetch all orders of all users</p>
+<p>Fetch all orders of all users.
+Payment status initialy =&gt; &quot;not initialized&quot;</p>
 <h3 id='http-request-22'>HTTP Request</h3>
 <p><code>GET https://amancover.herokuapp.com/v1/orders</code></p>
 <h3 id='query-parameters-20'>Query Parameters</h3>
@@ -1589,8 +1591,15 @@ Order can only be confirmed by admin otherwise you will get not authorized error
   </span><span class="s2">"error"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Unable to update Payment status.Please Try Again"</span><span class="w">
 </span><span class="p">}</span><span class="w">
 
+</span></code></pre><pre class="highlight json tab-json"><code><span class="w">
+</span><span class="err">HTTP</span><span class="w"> </span><span class="mi">402</span><span class="w"> </span><span class="err">OK</span><span class="w">
+</span><span class="p">{</span><span class="w">
+  </span><span class="s2">"msg"</span><span class="p">:</span><span class="w"> </span><span class="mi">0</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"error"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Payment Failed"</span><span class="w">
+</span><span class="p">}</span><span class="w">
+
 </span></code></pre>
-<p>Do Payment of the order. By Default the payment status is &quot;not initialized&quot;.
+<p>Do Payment of the order. By Default the payment status is &quot;not_initialized&quot;.
 If successfull then send &quot;success&quot; else &quot;failed&quot;</p>
 <h3 id='http-request-26'>HTTP Request</h3>
 <p><code>POST https://amancover.herokuapp.com/v1/paymentConfirmation</code></p>
@@ -1615,7 +1624,7 @@ If successfull then send &quot;success&quot; else &quot;failed&quot;</p>
 <tr>
 <td>payment_status</td>
 <td>String</td>
-<td>By default &quot;not initialized&quot;, otherwise send &quot;success&quot; and &quot;failed&quot;</td>
+<td>By default &quot;not_initialized&quot;, otherwise send &quot;success&quot; and &quot;failed&quot;</td>
 </tr>
 <tr>
 <td>payment_description</td>
@@ -1654,7 +1663,7 @@ If successfull then send &quot;success&quot; else &quot;failed&quot;</p>
 <p><code>POST https://amancover.herokuapp.com/v1/user_long_lats</code></p>
 <h3 id='query-parameters-25'>Query Parameters</h3>
 <p>{
-  &quot;long_lat&quot;: {&quot;longitude&quot;: 1.90384, &quot;latitute&quot;: 2.3490}
+  &quot;long_lat&quot;: {&quot;longitude&quot;: 1.90384, &quot;latitude&quot;: 2.3490}
 }</p>
 
 <aside class="success">
