--- a/index.html
+++ b/index.html
@@ -1387,6 +1387,11 @@ Only admin can update the product otherwise you will get not authorized error</p
 <td>String</td>
 <td>user id of vendor ( Send it only if vendor is created by mr)</td>
 </tr>
+<tr>
+<td>coupon_id</td>
+<td>String</td>
+<td>coupon id</td>
+</tr>
 </tbody></table>
 
 <aside class="success">
@@ -1633,7 +1638,7 @@ If successfull then send &quot;success&quot; else &quot;failed&quot;</p>
 <tr>
 <td>order_id</td>
 <td>String</td>
-<td>Id of Order</td>
+<td>Id of Razor pay Order</td>
 </tr>
 <tr>
 <td>payment_id</td>
@@ -1815,7 +1820,8 @@ Only admin can save the coupon otherwise you will get the not authorized error</
 <pre class="highlight json tab-json"><code><span class="w">
 </span><span class="err">HTTP</span><span class="w"> </span><span class="mi">200</span><span class="w"> </span><span class="err">OK</span><span class="w">
 </span><span class="p">{</span><span class="w">
-  </span><span class="s2">"msg"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Coupon valid"</span><span class="w">
+  </span><span class="s2">"msg"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Coupon valid"</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"coupon_id"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="w">
 </span><span class="p">}</span><span class="w">
 
 </span></code></pre>
