--- a/index.html
+++ b/index.html
@@ -377,7 +377,8 @@
 </span><span class="err">HTTP</span><span class="w"> </span><span class="mi">200</span><span class="w"> </span><span class="err">OK</span><span class="w">
 </span><span class="p">{</span><span class="w">
   </span><span class="s2">"msg"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w">
-  </span><span class="s2">"token"</span><span class="p">:</span><span class="w"> </span><span class="s2">"7dhf8hfjhdjf8rrhjdjfhdf844"</span><span class="w">
+  </span><span class="s2">"token"</span><span class="p">:</span><span class="w"> </span><span class="s2">"7dhf8hfjhdjf8rrhjdjfhdf844"</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"device_registered"</span><span class="p">:</span><span class="w"> </span><span class="kc">true</span><span class="w">
 </span><span class="p">}</span><span class="w">
 
 </span></code></pre>
@@ -450,6 +451,21 @@ For MR =&gt; Name,Address,Mobile,Email,Qualification,Role,Password</p>
 <td>String</td>
 <td>Value must be =&gt; admin,vendor,supplier or mr</td>
 </tr>
+<tr>
+<td>token</td>
+<td>String</td>
+<td>Token</td>
+</tr>
+<tr>
+<td>platform</td>
+<td>String</td>
+<td>platform</td>
+</tr>
+<tr>
+<td>uuid</td>
+<td>String</td>
+<td>uuid</td>
+</tr>
 </tbody></table>
 <h2 id='login-authentication'>Login - Authentication</h2>
 <blockquote>
@@ -461,7 +477,8 @@ For MR =&gt; Name,Address,Mobile,Email,Qualification,Role,Password</p>
   </span><span class="s2">"token"</span><span class="p">:</span><span class="w"> </span><span class="s2">"7dhf8hfjhdjf8rrhjdjfhdf844"</span><span class="p">,</span><span class="w">
   </span><span class="s2">"msg"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w">
   </span><span class="s2">"verified"</span><span class="p">:</span><span class="w"> </span><span class="kc">true</span><span class="p">,</span><span class="w">
-  </span><span class="s2">"role"</span><span class="p">:</span><span class="w"> </span><span class="s2">"vendor"</span><span class="w">
+  </span><span class="s2">"role"</span><span class="p">:</span><span class="w"> </span><span class="s2">"vendor"</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"device_registered"</span><span class="p">:</span><span class="w"> </span><span class="kc">true</span><span class="w">
 </span><span class="p">}</span><span class="w">
 
 </span></code></pre>
@@ -496,6 +513,21 @@ User can login with both email and mobile number</p>
 <td>password</td>
 <td>String</td>
 <td>Password of user</td>
+</tr>
+<tr>
+<td>token</td>
+<td>String</td>
+<td>Token</td>
+</tr>
+<tr>
+<td>platform</td>
+<td>String</td>
+<td>platform</td>
+</tr>
+<tr>
+<td>uuid</td>
+<td>String</td>
+<td>uuid</td>
 </tr>
 </tbody></table>
 <h2 id='verify-account'>Verify Account</h2>
